SL-3749 Clean up